--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pyramidotomy Neurite Analysis Tool</title>
+    <title>DeNAT</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <style>
         * {
@@ -451,8 +451,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Pyramidotomy Neurite Analysis Tool</h1>
-            <p>Advanced neurite detection and measurement with distance-based analysis</p>
+            <h1>Deep Neurite Analysis Tool (DeNAT)</h1>
+            <p>Machine learning bases neurite detection and measurement with distance-based analysis</p>
         </div>
 
         <div class="main-content">
